[package]
name = "static_server"
version = "0.1.0"
authors = ["Daniil Naumetc <daniil.naumetc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
clap = "2.33.0"
